<resources>
    <string name="app_name">Messenger App</string>
    <string name="login">SIGN IN</string>
    <string name="not_registered">Not registered?</string>
    <string name="password">Enter your password</string>
    <string name="nickname">Enter your nickname</string>
    <string name="authorize">SIGN UP</string>
    <string name="profession">What I do</string>
    <string name="sign_up">SIGN UP</string>
    <string name="search">Search</string>
    <string name="back_button">Go Back</string>
    <string name="update">Update</string>
    <string name="sign_out">Sign Out</string>
    <string name="write_message">Message</string>
    <string name="send">Send</string>
    <string name="action_button">action button</string>
    <string name="no_users_found">Could not find users with given name</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="retry">Retry</string>

    <string name="chat">Chat</string>
    <string name="no_messages">No messages yet</string>
    <string name="typing">Typing…</string>
    <string name="back">Back</string>
    <string name="tap_to_view_info">Tap to view info</string>

    <string name="back_content_description">Back</string>
    <string name="more_options">More options</string>
    <string name="user_name_default">User Name</string>
    <string name="message_received_default">I\'m doing great, thanks!</string>
    <string name="message_sent_default">Hello, how are you?</string>
    <string name="message_time_default_1">10:32</string>
    <string name="message_time_default_2">10:30</string>
    <string name="user_name_example">Sayed Eftiaz</string>
    <string name="profession_example">Project Manager</string>
    <string name="message_time_example">5 min</string>
    <string name="last_message_example">On my way home but i needed to stop by the book store to…</string>
    <string name="loading_conversations">Loading conversations…</string>
    <string name="no_conversations_title">No conversations yet</string>
    <string name="no_conversations_subtitle">Start a new conversation by\ntapping the + button below</string>
</resources>